added modular platform
svn path=/trunk/; revision=462

--- a/web/data/langs/_ca/Pages/faq
+++ b/web/data/langs/_ca/Pages/faq
@@ -13,7 +13,7 @@ FAQ de Chronojump - llistat de preguntes freqüents
 <ol>
 <li>Com puc construir una plataforma de contactes?
 <p>
-Seguiu les instruccions que es descriuen en aquesta pàgina web: <a href="construction_contact_platform_ca.html">"Instruccions per la construcció d'una plataforma de contactes per a la mesura de la capacitat del salt/s"</a>.
+Accediu a la pàgina web de <a href="hardware_ca.html">maquinari</a>.
 
 <p><li>On puc comprar la plataforma de contactes? Puc vendre la que jo he fet?
 <p>
