--- a/web/data/langs/_es/Pages/faq
+++ b/web/data/langs/_es/Pages/faq
@@ -13,7 +13,7 @@ FAQ de Chronojump - listado de preguntas frecuentes
 <ol>
 <li>¿Cómo puedo construir la plataforma de contactos?
 <p>
-Siga las instrucciones descritas en esta página web: <a href="construction_contact_platform_es.html">"Instrucciones para la construcción de una plataforma de contactos para la medición de la capacidad de salto/s"</a>.
+Consulte la <a href="hardware_es.html">página de hardware</a>.
 
 <p><li>¿Dónde puedo comprar la plataforma de contactos? ¿Puedo vender la que he hecho yo?
 <p>
