--- a/web/data/langs/_gl/Pages/faq
+++ b/web/data/langs/_gl/Pages/faq
@@ -13,7 +13,7 @@ FAQ de ChronoJump - listado de preguntas frecuentes
 <ol>
 <li>Como podo construír a plataforma de contactos?
 <p>
-Siga as instrucións descritas nesta páxina web: <a href="construction_contact_platform_gl.html">"Instrucións para a construción dunha plataforma de contactos para a medición da capacidade de salto/s"</a>.
+Lea la <a href="hardware_gl.html">páxina de hardware</a>.
 
 
 <p><li>Onde podo mercar a plataforma de contactos? Podo vender a que eu fixen?
