--- a/web/data/langs/_pt/Pages/faq
+++ b/web/data/langs/_pt/Pages/faq
@@ -13,7 +13,7 @@ FAQ de Chronojump - lista de perguntas freqüentes
 <ol>
 <li>Como posso construir a plataforma de contatos?
 <p>
-Atenda as instruções descritas nesta página web: <a href="construction_contact_platform_es.html">"Instruções para a construção de uma plataforma de contatos para a medição da capacidade de salto/s"</a>.
+Lea la <a href="hardware_pt.html">páxina de hardware</a>.
  
 <p><li>Onde posso comprar a plataforma de contatos? Posso vender a que eu fabriquei?
 <p>
