--- a/changelog.txt
+++ b/changelog.txt
@@ -2,8 +2,6 @@ TODO:
 
 Add Cabedo's tests
 
-add "chronopic3" to ping. maybe need to ask user
-
 add a link to the server page
 
 develop web stats and survey on web site. Maybe done by R script and calling
@@ -13,17 +11,18 @@ all this will be release 0.9
 
 do the ping gets real IP
 
-SEvaluator must be also local, and when edit, upload it. On the other hand, if
-it's only on server, we need to call server to know our values And it will be
-easy that users can know the evaluator data of others.
-mybe the best is have an SEvaluator local table iwht only one register.
-There's a need of a bool telling if it has been updated since last change or
-not.
-Then there's no need of evaluatorUniqueID in preferences.
-upload SEvaluator and edit it and re-upload
-add chronopic and device code th SEvaluator and update the diagram
+evaluator win TODO:
+-unchecked button_accept if needed on start
+-fix crash on cancel, or delete, or accept (on closing window)
+-fix crash on accept (bad sql)
+-accept is shown while no date of birth
 
-hide name in persons of server: replace it with uniqueID on insertion
+3 mar 2009
+	0.8.2.5
+	db 0.65
+	Sevaluator is also local (with only one row (uniqueID==1) for local evaluator
+	Pending to fix some evaluator window bugs
+	Hidden name in persons on server
 
 2 mar 2009 (3)
 	Fixed 505 is distance 10
