--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2009-03-28  Philip Withnall  <philip@tecnocode.co.uk>
+
+	* en_GB.po: Updated British English translation by Jen Ockwell
+	<jenfraggleubuntu@gmail.com> and myself.
+
 2009-01-25  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
 	* es.po: Updated Spanish translation.
