--- a/changelog.txt
+++ b/changelog.txt
@@ -1,76 +1,17 @@
-TODO:
+CHANGELOG.txt
 
-Add Cabedo's tests
+30 mar 2009
+	multiChronopic:
+	-event window is connected and start showing graph data (incorrect now)
+	-data is recorded in strings
+	-better gui (no radio buttons and integration of cp1)
+	-if a chronopic port is opened, cannot be opened by others
+	-multiChronopic works also with one
 
-add a link to the server page. Develop web stats and survey on web site. Maybe
-done by R script and calling to database
-http://cran.r-project.org/web/packages/RSQLite/index.html
-http://cran.r-project.org/web/packages/RSQLite/INSTALL
-http://cran.r-project.org/web/packages/DBI/index.html
+	solved sp disconnection (passed as out co chronopicInit)
+	helpPorts modal again
 
-all this will be release 0.9
-
-do the ping gets real IP
-
-put thread in other server situations:
--upload evaluator
--upload session
-
-do the graph of last jump plot values of jumps before
-(maybe show last jumps of this kind on different people, and the avg of this
-user and all users (this two in different color))
-
-http://en.csharp-online.net/ASP.NET_Security_Hacks¿Avoiding_SQL_Injection
-http://ferruh.mavituna.com/sql-injection-cheatsheet-oku/
-every string that gets on server or complex object, sanitize it: see on sql or
-c# books. Or look for ; and after alter, insert, delete, drop, update, ...
-(low and hight case)
-i think there will be no problems because all is parametrized
-
-Fix bug on thread sqlite at start (see png at Desktop)
-
-Put pictures and description of runAnalysis. Do svn add, Makefile, ...
-
-
-intersession stats only have to show one max or avg, not n max or all jumps
-
-stats all and limit is not updating the treeview stats. 
-
-us Util.DetectPortsLinux in gui/help ports
-
-when person weight is updated, description of eg. margaria (with power)
-doesn't change. Should change or use another thing. Recreate all time in
-session.... also same when edit jump.
-Maybe is better to don't have it (the power) recorded at any place but generate when it's
-required
-
-in execution graph put avgs as horizontal lines
-and plot all tests of same type of same person
-
-count time(s)  cp change diff same cp diff all cp
-1          10   1     IN           10          10
-2          15   2     IN           15           5
-3          20   1    OUT           10           5
-3          20   3     IN           20           0
-4          25   2    OUT           10           5
-5          30   3    OUT           10           5
-6          60   1     IN           40          30
-7          65   2     IN           40           5
-8          70   3     IN           40           5
-
-do like this:
-                     state  time change   time IN-IN time OUT-OUT
-count time(s)  cp1 cp2 cp3  cp1 cp2 cp3  cp1 cp2 cp3  cp1 cp2 cp3
-0           0  OUT OUT OUT 
-1          10   IN           10
-2          15       IN           15
-3          20  OUT      IN   10      20                20
-4          25  	   OUT           10                        25
-5          30          OUT           10                        30 
-6          60   IN           40           50
-7          65       IN           40           50
-8          70           IN           40           50
-
+	separated todo in changelog.txt to TODO.txt
 
 27 mar 2009
 	four chronopics can be connected from gui/chronojump.cs
