multiChronopic shows graph real time for 4 chronopics, but still some little bugs to fix multichronopic graph is bigger than others
svn path=/trunk/; revision=480

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,10 @@
 TODO: 
 
+mirar fallo al tancar finestra executar fent click a X
+abans o després de cancelar
+i mirar la minifinestra que surt (de d'acord) que es pugui tancar també amb la X
+look also chrash on exiting thread is still open when 2 chronopics are used
+
 Add Cabedo's tests
 
 add a link to the server page. Develop web stats and survey on web site. Maybe
