--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,16 @@
 TODO: 
 
+new multichronopic tests:
+- padu runAnalysis (2cp)
+- discrimitative reaction time with two lights and two fotocells (or platforms)
+(4cp) when evaluator push left or right button, cp 1 or cp2 lights, person has to cross fotocell a or b (connected to cp 3, 4)
+better with only two chronopics, if evaluator push cp1, light1 gets on and person has tocross fotocell1 (or platform). Then with two we have all.
+we can also have three or four to have more discriminative
+
+finish button bigger
+change infrared icon (put velleman)
+see flickering on dj eventExecute graphs
+
 fix graph problems on multichronopic (also when there's only a chronopic)
 
 
