--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,5 @@
 TODO: 
 
-clarify on new/edit user what needs to be completed to show accept button (show icons of attention)
 
 new multichronopic tests:
 - padu runAnalysis (2cp)
@@ -9,8 +8,6 @@ new multichronopic tests:
 better with only two chronopics, if evaluator push cp1, light1 gets on and person has tocross fotocell1 (or platform). Then with two we have all.
 we can also have three or four to have more discriminative
 
-see flickering on dj eventExecute graphs
-
 fix graph problems on multichronopic (also when there's only a chronopic)
 
 
@@ -18,6 +15,7 @@ mirar fallo al tancar finestra executar fent click a X
 abans o després de cancelar
 i mirar la minifinestra que surt (de d'acord) que es pugui tancar també amb la X
 look also chrash on exiting thread is still open when 2 chronopics are used
+i think test button has to be pressed on both chronopics when test is ended
 
 Add Cabedo's tests
 
